--- a/example/vercel.json
+++ b/example/vercel.json
@@ -29,6 +29,6 @@
 
   ],
   {
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/home.html" }]
   }
 }
